modify docker-compose.yml to use spark in local mode for dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,41 +40,21 @@ services:
     networks:
       - app-network
 
-  spark-master:
+  spark:
     image: bitnami/spark:latest
-    container_name: spark-master
+    container_name: spark
     environment:
       - SPARK_MODE=master
+      - SPARK_MASTER_URL=local[*]
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
     ports:
       - "8080:8080"  # Web UI
-      - "7077:7077"  # Spark master port
     volumes:
       - ./spark-apps:/opt/spark/apps  # For your Spark applications
       - ./spark-data:/opt/spark/data  # For your data
-    networks:
-      - app-network
-
-  spark-worker:
-    image: bitnami/spark:latest
-    container_name: spark-worker
-    environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_WORKER_CORES=1
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
-    volumes:
-      - ./spark-apps:/opt/spark/apps  # For your Spark applications
-      - ./spark-data:/opt/spark/data  # For your data
-    depends_on:
-      - spark-master
     networks:
       - app-network
 
